<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/Labels"
        android:background="@android:color/holo_blue_light"
        android:text="@string/world_news_label" />

    <ImageView
        android:id="@+id/worldNewsSection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_light"
        app:srcCompat="@drawable/world_news3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/fashionSection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@android:color/holo_purple"
            android:orientation="vertical">

            <TextView
                style="@style/Labels"
                android:text="@string/fashion_label" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/f06" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sportSection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:orientation="vertical">

            <TextView
                style="@style/Labels"
                android:text="@string/sport_label" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/sport" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
