<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingEnd="5dp"
    android:paddingStart="5dp"
    android:paddingTop="10dp">

    <ImageView
        android:id="@+id/story_image_view"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/type_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textStyle="bold"
            android:textColor="@color/primaryLightColor"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:paddingTop="3dp"
            android:text="@string/title"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/authors_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authors"
            android:textAppearance="?android:textAppearanceSmall"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/secondaryDarkColor"
            android:textStyle="italic"
            tools:text="Oct 10, 2017" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/secondaryDarkColor"
            android:textStyle="italic"
            tools:text="3:00 PM" />
    </LinearLayout>
</LinearLayout>